--- a/web/hello.html
+++ b/web/hello.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <meta charset="GB2312">
+    <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <title>title</title>
@@ -24,10 +24,10 @@
                 <li class="nav-header">
                     <div class="dropdown profile-element">
                         <a data-toggle="dropdown" class="dropdown-toggle" href="#">
-                            <span class="clear"> <span class="block m-t-xs"> <strong class="font-bold">гЮм╜п║╫Ц╫Ц</strong>
-                             </span> <span class="text-muted text-xs block">╧эюМт╠ <b class="caret"></b></span> </span> </a>
+                            <span class="clear"> <span class="block m-t-xs"> <strong class="font-bold">И²▓И⌠°Е╟▐Е╖░Е╖░</strong>
+                             </span> <span class="text-muted text-xs block">Г╝║Г░├Е▒≤ <b class="caret"></b></span> </span> </a>
                         <ul class="dropdown-menu animated fadeInRight m-t-xs">
-                            <li><a href="login.html">╣гЁЖ</a></li>
+                            <li><a href="login.html">Г≥╩Е┤╨</a></li>
                         </ul>
                     </div>
                     <div class="logo-element">
@@ -35,25 +35,25 @@
                     </div>
                 </li>
                 <li class="active">
-                    <a href="hello.html"><i class="fa fa-th-large"></i> <span class="nav-label">жВрЁ</span></a>
+                    <a href="hello.html"><i class="fa fa-th-large"></i> <span class="nav-label">Д╦╩И║╣</span></a>
                 </li>
                 <li>
-                    <a href="column_manage.html"><i class="fa fa-diamond"></i> <span class="nav-label">ю╦д©╧эюМ</span></a>
+                    <a href="column_manage.html"><i class="fa fa-diamond"></i> <span class="nav-label">Ф═▐Г⌡╝Г╝║Г░├</span></a>
                 </li>
                 <li>
-                    <a href="article_manage.html"><i class="fa fa-magic"></i> <span class="nav-label">ндуб╧эюМ</span></a>
+                    <a href="article_manage.html"><i class="fa fa-magic"></i> <span class="nav-label">Ф√┤Г╚═Г╝║Г░├</span></a>
                 </li>
 
                 <li >
-                    <a href="#"><i class="fa fa-files-o"></i> <span class="nav-label">ндуб╠Ю╪╜╧эюМ</span><span class="fa arrow"></span></a>
+                    <a href="#"><i class="fa fa-files-o"></i> <span class="nav-label">Ф√┤Г╚═Г╪√Х╬▒Г╝║Г░├</span><span class="fa arrow"></span></a>
                     <ul class="nav nav-second-level collapse">
-                        <li><a href="editor.html">ндуб╠Ю╪╜</a></li>
-                        <li><a href="editor_article_manage.html">ндуб╧эюМ</a></li>
+                        <li><a href="editor.html">Ф√┤Г╚═Г╪√Х╬▒</a></li>
+                        <li><a href="editor_article_manage.html">Ф√┤Г╚═Г╝║Г░├</a></li>
                     </ul>
                 </li>
 
                 <li>
-                    <a href="reader.html"><i class="fa fa-desktop"></i> <span class="nav-label">ндубД╞юю</span></a>
+                    <a href="reader.html"><i class="fa fa-desktop"></i> <span class="nav-label">Ф√┤Г╚═Ф╣▐Х╖┬</span></a>
                 </li>
 
             </ul>
@@ -70,7 +70,7 @@
                 <ul class="nav navbar-top-links navbar-right">
                     <li>
                         <a href="login.html">
-                            <i class="fa fa-sign-out"></i> мкЁЖ
+                            <i class="fa fa-sign-out"></i> И──Е┤╨
                         </a>
                     </li>
                 </ul>
@@ -82,10 +82,10 @@
                 <div class="col-lg-12">
                     <div class="text-center m-t-lg">
                         <h1>
-                            р╩ж╩╨ЭюЙ╟║ кЭвЬтзиЁгПио
+                            Д╦─Е▐╙Г▀░Г▀╦Е∙┼ Е╝┐Е²░Е°╗Ф╡≥Д╦≤Д╦┼
                         </h1>
                         <small>
-                            вЬтзиЁгПиоё╛мШветбаа
+                            Е²░Е°╗Ф╡≥Д╦≤Д╦┼О╪▄Ф°⌡Г²─Ф°┬Д╨╝
                         </small>
 
                     </div>
