--- a/web/login.html
+++ b/web/login.html
@@ -31,14 +31,14 @@
             </div>
             <div class="col-md-6">
                 <div class="ibox-content">
-                    <form class="m-t" role="form" action="index.html">
+                    <form class="m-t" role="form" id="form1">
                         <div class="form-group">
-                            <input type="text" class="form-control" placeholder="用户名" required="">
+                            <input type="text" class="form-control" name="username" placeholder="用户名" required="">
                         </div>
                         <div class="form-group">
-                            <input type="password" class="form-control" placeholder="密码" required="">
+                            <input type="password" class="form-control" name="pwd" placeholder="密码" required="">
                         </div>
-                        <button type="submit" class="btn btn-primary block full-width m-b">登录</button>
+                        <button type="button" class="btn btn-primary block full-width m-b" onclick="login()">登录</button>
 
                         <a href="forgot_password.html">
                             <small>忘记密码?</small>
@@ -61,5 +61,9 @@
     </div>
 
 </body>
+<script src="js/jquery-3.1.1.min.js"></script>
+<script src="js/jquery.form.js"></script>
+
+<script src="login.js"></script>
 
 </html>
