--- a/web/sample.html
+++ b/web/sample.html
@@ -9,11 +9,7 @@
     <title>文章</title>
 
     <link href="css/bootstrap.min.css" rel="stylesheet">
-<<<<<<< HEAD
-    <link href="../../htmldesign1的副本/font-awesome/css/font-awesome.css" rel="stylesheet">
-=======
     <link href="font-awesome/css/font-awesome.css" rel="stylesheet">
->>>>>>> f073f34f676406a26e69802f52a6de32c8943130
     <link href="css/animate.css" rel="stylesheet">
     <link href="css/plugins/bootstrap-markdown/bootstrap-markdown.min.css" rel="stylesheet">
     <link href="css/style.css" rel="stylesheet">
@@ -41,11 +37,7 @@
                     </div>
                 </li>
                 <li >
-<<<<<<< HEAD
-                    <a href="../../htmldesign1的副本/hello.html"><i class="fa fa-th-large"></i> <span class="nav-label">主页</span></a>
-=======
                     <a href="hello.html"><i class="fa fa-th-large"></i> <span class="nav-label">主页</span></a>
->>>>>>> f073f34f676406a26e69802f52a6de32c8943130
                 </li>
                 <li>
                     <a href="column_manage.html"><i class="fa fa-diamond"></i> <span class="nav-label">栏目管理</span></a>
@@ -57,13 +49,8 @@
                 <li >
                     <a href="#"><i class="fa fa-files-o"></i> <span class="nav-label">文章编辑管理</span><span class="fa arrow"></span></a>
                     <ul class="nav nav-second-level collapse">
-<<<<<<< HEAD
-                        <li><a href="../../htmldesign1的副本/editor.html">文章编辑</a></li>
-                        <li><a href="../../htmldesign1的副本/editor_article_manage.html">文章管理</a></li>
-=======
                         <li><a href="editor.html">文章编辑</a></li>
                         <li><a href="editor_article_manage.html">文章管理</a></li>
->>>>>>> f073f34f676406a26e69802f52a6de32c8943130
                     </ul>
                 </li>
 
@@ -124,61 +111,23 @@
                                 <button class="btn btn-white btn-xs" type="button">哲学</button>
                             </div>
                             <div class="text-center article-title">
-                                <h1>
-                                    时间从何而来？为什么时间似乎是流动的？
+                                <h1 class="text-warning">
+                                    文章标题
                                 </h1>
                             </div>
-                            <p>
-                                在我们看来，宇宙万物皆是永恒变化的，所以我们产生了时间的概念。通过时间，我们可以研究事物的变化。然而，关于时间的本质，还有待我们进一步探究。
-                            </p>
-                            <p>
-                                时间流动是真实还是错觉？<br>
-                                之所以有些人认为时间流动是错觉，是因为当人们停下来思考时，无法理解时间流动究竟意味着什么。我们常说时间就像河流一样流动，这样的意思是河流的水在某一时刻处于与前一时刻不同的地方。换言之，水相对于时间移动。然而，时间并不能随着时间而流动，时间就是时间。
+                            <div class="text-center article" id="content">
+                                <p>
+                                    在我们看来，宇宙万物皆是永恒变化的，所以我们产生了时间的概念。通过时间，我们可以研究事物的变化。然而，关于时间的本质，还有待我们进一步探究。
+                                </p>
+                                <p>
+                                    时间流动是真实还是错觉？<br>
+                                    之所以有些人认为时间流动是错觉，是因为当人们停下来思考时，无法理解时间流动究竟意味着什么。我们常说时间就像河流一样流动，这样的意思是河流的水在某一时刻处于与前一时刻不同的地方。换言之，水相对于时间移动。然而，时间并不能随着时间而流动，时间就是时间。
 
-                                很多人误以为时间不流动就是意味着没有时间，时间不存在。然而，这是无稽之谈。时间当然存在，我们用时钟来测量它。时钟不是测量时间的流逝，而是测量时间的间隔。在事件之间存在时间间隔，这就是时钟所测量的。
-                            </p>
-                            <br>
-<<<<<<< HEAD
-                            <img src="../../htmldesign1的副本/img/a6.jpg" class="img img-rounded">
-=======
-                            <img src="img/a6.jpg" class="img img-rounded">
->>>>>>> f073f34f676406a26e69802f52a6de32c8943130
-                            <p>
-                                在我们看来，宇宙万物皆是永恒变化的，所以我们产生了时间的概念。通过时间，我们可以研究事物的变化。然而，关于时间的本质，还有待我们进一步探究。
-                            </p>
-                            <p>
-                                时间流动是真实还是错觉？<br>
-                                之所以有些人认为时间流动是错觉，是因为当人们停下来思考时，无法理解时间流动究竟意味着什么。我们常说时间就像河流一样流动，这样的意思是河流的水在某一时刻处于与前一时刻不同的地方。换言之，水相对于时间移动。然而，时间并不能随着时间而流动，时间就是时间。
+                                    很多人误以为时间不流动就是意味着没有时间，时间不存在。然而，这是无稽之谈。时间当然存在，我们用时钟来测量它。时钟不是测量时间的流逝，而是测量时间的间隔。在事件之间存在时间间隔，这就是时钟所测量的。
+                                </p>
+                            </div>
 
-                                很多人误以为时间不流动就是意味着没有时间，时间不存在。然而，这是无稽之谈。时间当然存在，我们用时钟来测量它。时钟不是测量时间的流逝，而是测量时间的间隔。在事件之间存在时间间隔，这就是时钟所测量的。
-                            </p>
-                            <p>
-                                在我们看来，宇宙万物皆是永恒变化的，所以我们产生了时间的概念。通过时间，我们可以研究事物的变化。然而，关于时间的本质，还有待我们进一步探究。
-                            </p>
-                            <p>
-                                时间流动是真实还是错觉？<br>
-                                之所以有些人认为时间流动是错觉，是因为当人们停下来思考时，无法理解时间流动究竟意味着什么。我们常说时间就像河流一样流动，这样的意思是河流的水在某一时刻处于与前一时刻不同的地方。换言之，水相对于时间移动。然而，时间并不能随着时间而流动，时间就是时间。
 
-                                很多人误以为时间不流动就是意味着没有时间，时间不存在。然而，这是无稽之谈。时间当然存在，我们用时钟来测量它。时钟不是测量时间的流逝，而是测量时间的间隔。在事件之间存在时间间隔，这就是时钟所测量的。
-                            </p>
-                            <p>
-                                在我们看来，宇宙万物皆是永恒变化的，所以我们产生了时间的概念。通过时间，我们可以研究事物的变化。然而，关于时间的本质，还有待我们进一步探究。
-                            </p>
-                            <p>
-                                时间流动是真实还是错觉？<br>
-                                之所以有些人认为时间流动是错觉，是因为当人们停下来思考时，无法理解时间流动究竟意味着什么。我们常说时间就像河流一样流动，这样的意思是河流的水在某一时刻处于与前一时刻不同的地方。换言之，水相对于时间移动。然而，时间并不能随着时间而流动，时间就是时间。
-
-                                很多人误以为时间不流动就是意味着没有时间，时间不存在。然而，这是无稽之谈。时间当然存在，我们用时钟来测量它。时钟不是测量时间的流逝，而是测量时间的间隔。在事件之间存在时间间隔，这就是时钟所测量的。
-                            </p>
-                            <p>
-                                在我们看来，宇宙万物皆是永恒变化的，所以我们产生了时间的概念。通过时间，我们可以研究事物的变化。然而，关于时间的本质，还有待我们进一步探究。
-                            </p>
-                            <p>
-                                时间流动是真实还是错觉？<br>
-                                之所以有些人认为时间流动是错觉，是因为当人们停下来思考时，无法理解时间流动究竟意味着什么。我们常说时间就像河流一样流动，这样的意思是河流的水在某一时刻处于与前一时刻不同的地方。换言之，水相对于时间移动。然而，时间并不能随着时间而流动，时间就是时间。
-
-                                很多人误以为时间不流动就是意味着没有时间，时间不存在。然而，这是无稽之谈。时间当然存在，我们用时钟来测量它。时钟不是测量时间的流逝，而是测量时间的间隔。在事件之间存在时间间隔，这就是时钟所测量的。
-                            </p>
                         </div>
                     </div>
                 </div>
@@ -191,20 +140,6 @@
 </div>
 
 <!-- Mainly scripts -->
-<<<<<<< HEAD
-<script src="../../htmldesign1的副本/js/jquery-3.1.1.min.js"></script>
-<script src="../../htmldesign1的副本/js/bootstrap.min.js"></script>
-<script src="../../htmldesign1的副本/js/plugins/metisMenu/jquery.metisMenu.js"></script>
-<script src="../../htmldesign1的副本/js/plugins/slimscroll/jquery.slimscroll.min.js"></script>
-
-<!-- Custom and plugin javascript -->
-<script src="../../htmldesign1的副本/js/inspinia.js"></script>
-<script src="../../htmldesign1的副本/js/plugins/pace/pace.min.js"></script>
-
-<!-- Bootstrap markdown -->
-<script src="../../htmldesign1的副本/js/plugins/bootstrap-markdown/bootstrap-markdown.js"></script>
-<script src="../../htmldesign1的副本/js/plugins/bootstrap-markdown/markdown.js"></script>
-=======
 <script src="js/jquery-3.1.1.min.js"></script>
 <script src="js/bootstrap.min.js"></script>
 <script src="js/plugins/metisMenu/jquery.metisMenu.js"></script>
@@ -217,7 +152,6 @@
 <!-- Bootstrap markdown -->
 <script src="js/plugins/bootstrap-markdown/bootstrap-markdown.js"></script>
 <script src="js/plugins/bootstrap-markdown/markdown.js"></script>
->>>>>>> f073f34f676406a26e69802f52a6de32c8943130
 
 </body>
 
