--- a/web/article_manage.html
+++ b/web/article_manage.html
@@ -119,30 +119,21 @@
                                 </tr>
                                 </thead>
                                 <tbody>
-                                <tr>
-                                    <td>001</td>
-                                    <td>🦊要等到姑娘呀</td>
-                                    <td><code>体育</code></td>
-                                    <td><code>坤坤</code></td>
-                                    <td><code>待审核</code></td>
+                                <tr v-for="article in articles">
+                                    <td v-text="article.aid"></td>
+                                    <td v-text="article.title"></td>
+                                    <td><code v-text="article.cname"></code></td>
+                                    <td><code v-text="article.ename"></code></td>
+                                    <td><code v-text="article.uname"></code></td>
                                     <td>
                                         <div class="center-block">
-                                            <button class="btn btn-default" data-toggle="modal" data-target="#myModal1">允许上传</button>
-                                            <button class="btn btn-default" data-toggle="modal" data-target="#myModal">退回稿件</button>
-                                            <button class="btn btn-default" data-toggle="modal" data-target="#myModal2">删除</button>
+                                            <button class="btn btn-default" data-toggle="modal" data-target="#allowModal" v-bind:data-aid="article.aid" >允许上传</button>
+                                            <button class="btn btn-default" data-toggle="modal" data-target="#rejectModal" v-bind:data-aid="article.aid" v-show="article.state === 'checked'">退回稿件</button>
+                                            <button class="btn btn-default" data-toggle="modal" data-target="#deleteModal" v-bind:data-aid="article.aid" v-show="article.state === 'checked'">删除</button>
                                         </div>
                                     </td>
                                 </tr>
-                                <tr>
-                                    <td>
-                                        <code>fullscreen</code>
-                                    </td>
-                                    <td><code>object</code></td>
-                                    <td>包含 <code>enable</code> (<code>bool</code>) 和 <code>icons</code> (<code>object</code>) 键</td>
-                                    <td>
-                                        <code>fullscreen</code>
-                                    </td>
-                                </tr>
+                            
                                 </tbody>
                             </table>
 
@@ -157,7 +148,7 @@
 </div>
 
 <!-- Modal -->
-<div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
+<div class="modal fade" id="rejectModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
     <div class="modal-dialog" role="document">
         <div class="modal-content">
             <div class="modal-header">
@@ -177,7 +168,7 @@
     </div>
 </div>
 
-<div class="modal fade" id="myModal1" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
+<div class="modal fade" id="allowModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
     <div class="modal-dialog" role="document">
         <div class="modal-content">
             <div class="modal-header">
@@ -191,12 +182,13 @@
             </div>
             <div class="modal-footer">
                 <button type="button" class="btn btn-default" data-dismiss="modal">取消</button>
-                <button type="button" class="btn btn-primary" data-dismiss="modal" aria-label="Close">确认</button>
+                <button type="button" class="btn btn-primary" id="allow" data-dismiss="modal" aria-label="Close">确认</button>
             </div>
         </div>
     </div>
 </div>
-<div class="modal fade" id="myModal2" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
+
+<div class="modal fade" id="deleteModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
     <div class="modal-dialog" role="document">
         <div class="modal-content">
             <div class="modal-header">
@@ -229,6 +221,9 @@
 <!-- Bootstrap markdown -->
 <script src="js/plugins/bootstrap-markdown/bootstrap-markdown.js"></script>
 <script src="js/plugins/bootstrap-markdown/markdown.js"></script>
+
+<script src="https://cdn.jsdelivr.net/npm/vue"></script>
+<script src="article_manage.js"></script>
 
 </body>
 
