--- a/web/reader.html
+++ b/web/reader.html
@@ -97,7 +97,7 @@
 
         </div>
         <div class="wrapper wrapper-content animated fadeInRight">
-            <div class="row">
+            <div class="row" id="article-table">
                 <div class="col-lg-12">
                     <div class="ibox float-e-margins">
                         <div class="ibox-content">
@@ -112,12 +112,12 @@
                                     </tr>
                                     </thead>
                                     <tbody>
-
-                                    <!-- <tr class="gradeA" v-for="new in news" v-on:click="showArticle" v-bind:aid="new.aid">
-                                        <td>{{new.title}}</td>
-                                        <td>{{new.content}}</td>
-                                        <td>{{new.eid}}</td>
-                                    </tr> -->
+                                
+                                    <tr class="gradeA" v-for="new in news" v-bind:aid="new.aid">
+                                        <td v-text="new.title"></td>
+                                        <td v-text="new.content"></td>
+                                        <td v-text="new.eid"></td>
+                                    </tr>
 
                                     </tbody>
                                 </table>
@@ -148,31 +148,31 @@
 
 <!-- Page-Level Scripts -->
 <script>
-    $(document).ready(function(){
-        $('.dataTables-example').DataTable({
-            pageLength: 10,
-            responsive: true,
-            // dom: '<"html5buttons"B>lTfgitp',
-            buttons: [
-                // { extend: 'copy'},
-                // {extend: 'csv'},
-                // {extend: 'excel', title: 'ExampleFile'},
-                // {extend: 'pdf', title: 'ExampleFile'},
+    // $(document).ready(function(){
+    //     $('.dataTables-example').DataTable({
+    //         pageLength: 10,
+    //         responsive: true,
+    //         // dom: '<"html5buttons"B>lTfgitp',
+    //         buttons: [
+    //             // { extend: 'copy'},
+    //             // {extend: 'csv'},
+    //             // {extend: 'excel', title: 'ExampleFile'},
+    //             // {extend: 'pdf', title: 'ExampleFile'},
 
-                // {extend: 'print',
-                //     customize: function (win){
-                //         $(win.document.body).addClass('white-bg');
-                //         $(win.document.body).css('font-size', '10px');
-                //
-                //         $(win.document.body).find('table')
-                //             .addClass('compact')
-                //             .css('font-size', 'inherit');
-                //     }
-                // }
-            ]
-        });
+    //             // {extend: 'print',
+    //             //     customize: function (win){
+    //             //         $(win.document.body).addClass('white-bg');
+    //             //         $(win.document.body).css('font-size', '10px');
+    //             //
+    //             //         $(win.document.body).find('table')
+    //             //             .addClass('compact')
+    //             //             .css('font-size', 'inherit');
+    //             //     }
+    //             // }
+    //         ]
+    //     });
 
-    });
+    // });
 
 </script>
 
