--- a/classes/artifacts/news_release_system_war_exploded/editor.html
+++ b/classes/artifacts/news_release_system_war_exploded/editor.html
@@ -105,9 +105,16 @@
             <form class="m-t" role="form" id="editormassage">
                 <div class="col-lg-12">
                     <div class="ibox float-e-margins">
-                        <div class="ibox-title" style="height: 120px">
-                            <h3>文章标题:</h3>
-                            <input placeholder="请输入你的标题" name="title" id="atitle">
+                        <div class="ibox-title" style="height: 160px">
+                            <h3 class="text-warning">文章标题:</h3><input placeholder="请输入你的标题" name="title" id="atitle">
+                            <h3 class="text-success">栏目类型</h3>
+                            <select class="form-control" style="width: 10%">
+                                <option>1</option>
+                                <option>2</option>
+                                <option>3</option>
+                                <option>4</option>
+                                <option>5</option>
+                            </select>
                         </div>
                         <div class="ibox-content no-padding">
                             <div class="summernote" name="content" id="content"><h3>在此进行编辑你的文章</h3></div>
@@ -119,7 +126,7 @@
                         <button type="button" class="btn btn-primary block full-width m-b" onclick="save()">保存</button>
                     </div>
                     <div class="col-lg-1">
-                        <button class="btn btn-primary block full-width m-b" onclick="upload()">上传</button>
+                        <button type="button" class="btn btn-primary block full-width m-b" onclick="upload()">上传</button>
                     </div>
                 </div>
             </form>
