--- a/classes/artifacts/news_release_system_war_exploded/sample.html
+++ b/classes/artifacts/news_release_system_war_exploded/sample.html
@@ -111,57 +111,23 @@
                                 <button class="btn btn-white btn-xs" type="button">哲学</button>
                             </div>
                             <div class="text-center article-title">
-                                <h1>
-                                    时间从何而来？为什么时间似乎是流动的？
+                                <h1 class="text-warning">
+                                    文章标题
                                 </h1>
                             </div>
-                            <p>
-                                在我们看来，宇宙万物皆是永恒变化的，所以我们产生了时间的概念。通过时间，我们可以研究事物的变化。然而，关于时间的本质，还有待我们进一步探究。
-                            </p>
-                            <p>
-                                时间流动是真实还是错觉？<br>
-                                之所以有些人认为时间流动是错觉，是因为当人们停下来思考时，无法理解时间流动究竟意味着什么。我们常说时间就像河流一样流动，这样的意思是河流的水在某一时刻处于与前一时刻不同的地方。换言之，水相对于时间移动。然而，时间并不能随着时间而流动，时间就是时间。
+                            <div class="text-center article" id="content">
+                                <p>
+                                    在我们看来，宇宙万物皆是永恒变化的，所以我们产生了时间的概念。通过时间，我们可以研究事物的变化。然而，关于时间的本质，还有待我们进一步探究。
+                                </p>
+                                <p>
+                                    时间流动是真实还是错觉？<br>
+                                    之所以有些人认为时间流动是错觉，是因为当人们停下来思考时，无法理解时间流动究竟意味着什么。我们常说时间就像河流一样流动，这样的意思是河流的水在某一时刻处于与前一时刻不同的地方。换言之，水相对于时间移动。然而，时间并不能随着时间而流动，时间就是时间。
 
-                                很多人误以为时间不流动就是意味着没有时间，时间不存在。然而，这是无稽之谈。时间当然存在，我们用时钟来测量它。时钟不是测量时间的流逝，而是测量时间的间隔。在事件之间存在时间间隔，这就是时钟所测量的。
-                            </p>
-                            <br>
-                            <img src="img/a6.jpg" class="img img-rounded">
-                            <p>
-                                在我们看来，宇宙万物皆是永恒变化的，所以我们产生了时间的概念。通过时间，我们可以研究事物的变化。然而，关于时间的本质，还有待我们进一步探究。
-                            </p>
-                            <p>
-                                时间流动是真实还是错觉？<br>
-                                之所以有些人认为时间流动是错觉，是因为当人们停下来思考时，无法理解时间流动究竟意味着什么。我们常说时间就像河流一样流动，这样的意思是河流的水在某一时刻处于与前一时刻不同的地方。换言之，水相对于时间移动。然而，时间并不能随着时间而流动，时间就是时间。
+                                    很多人误以为时间不流动就是意味着没有时间，时间不存在。然而，这是无稽之谈。时间当然存在，我们用时钟来测量它。时钟不是测量时间的流逝，而是测量时间的间隔。在事件之间存在时间间隔，这就是时钟所测量的。
+                                </p>
+                            </div>
 
-                                很多人误以为时间不流动就是意味着没有时间，时间不存在。然而，这是无稽之谈。时间当然存在，我们用时钟来测量它。时钟不是测量时间的流逝，而是测量时间的间隔。在事件之间存在时间间隔，这就是时钟所测量的。
-                            </p>
-                            <p>
-                                在我们看来，宇宙万物皆是永恒变化的，所以我们产生了时间的概念。通过时间，我们可以研究事物的变化。然而，关于时间的本质，还有待我们进一步探究。
-                            </p>
-                            <p>
-                                时间流动是真实还是错觉？<br>
-                                之所以有些人认为时间流动是错觉，是因为当人们停下来思考时，无法理解时间流动究竟意味着什么。我们常说时间就像河流一样流动，这样的意思是河流的水在某一时刻处于与前一时刻不同的地方。换言之，水相对于时间移动。然而，时间并不能随着时间而流动，时间就是时间。
 
-                                很多人误以为时间不流动就是意味着没有时间，时间不存在。然而，这是无稽之谈。时间当然存在，我们用时钟来测量它。时钟不是测量时间的流逝，而是测量时间的间隔。在事件之间存在时间间隔，这就是时钟所测量的。
-                            </p>
-                            <p>
-                                在我们看来，宇宙万物皆是永恒变化的，所以我们产生了时间的概念。通过时间，我们可以研究事物的变化。然而，关于时间的本质，还有待我们进一步探究。
-                            </p>
-                            <p>
-                                时间流动是真实还是错觉？<br>
-                                之所以有些人认为时间流动是错觉，是因为当人们停下来思考时，无法理解时间流动究竟意味着什么。我们常说时间就像河流一样流动，这样的意思是河流的水在某一时刻处于与前一时刻不同的地方。换言之，水相对于时间移动。然而，时间并不能随着时间而流动，时间就是时间。
-
-                                很多人误以为时间不流动就是意味着没有时间，时间不存在。然而，这是无稽之谈。时间当然存在，我们用时钟来测量它。时钟不是测量时间的流逝，而是测量时间的间隔。在事件之间存在时间间隔，这就是时钟所测量的。
-                            </p>
-                            <p>
-                                在我们看来，宇宙万物皆是永恒变化的，所以我们产生了时间的概念。通过时间，我们可以研究事物的变化。然而，关于时间的本质，还有待我们进一步探究。
-                            </p>
-                            <p>
-                                时间流动是真实还是错觉？<br>
-                                之所以有些人认为时间流动是错觉，是因为当人们停下来思考时，无法理解时间流动究竟意味着什么。我们常说时间就像河流一样流动，这样的意思是河流的水在某一时刻处于与前一时刻不同的地方。换言之，水相对于时间移动。然而，时间并不能随着时间而流动，时间就是时间。
-
-                                很多人误以为时间不流动就是意味着没有时间，时间不存在。然而，这是无稽之谈。时间当然存在，我们用时钟来测量它。时钟不是测量时间的流逝，而是测量时间的间隔。在事件之间存在时间间隔，这就是时钟所测量的。
-                            </p>
                         </div>
                     </div>
                 </div>
