--- a/web/column_manage.html
+++ b/web/column_manage.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html xmlns:v-bind="http://www.w3.org/1999/xhtml">
 
 <head>
 
@@ -109,7 +109,7 @@
                     <div class="ibox float-e-margins">
 
                         <div class="ibox-content">
-                            <table class="table table-striped">
+                            <table class="table table-striped" id="columntable">
                                 <thead>
                                 <tr>
                                     <th>栏目ID</th>
