--- a/web/reader.html
+++ b/web/reader.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html xmlns:v-on="http://www.w3.org/1999/xhtml" xmlns:v-bind="http://www.w3.org/1999/xhtml">
 
-<head>
+<head xmlns:v-bind="http://www.w3.org/1999/xhtml">
 
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -89,7 +89,7 @@
                 </ul>
             </nav>
         </div>
-        <div class="row wrapper border-bottom white-bg page-heading">
+        <div class="row wrapper border-bottom white-bg page-heading" id="columns-button">
             <div class="col-lg-10" id="app">
                 <h2>栏目</h2>
                 <button class="btn btn-default" v-for="column in columns" v-on:click="chooseColumns" v-bind:cid="column.cid"> {{ column.cname }} </button>
@@ -97,11 +97,10 @@
 
         </div>
         <div class="wrapper wrapper-content animated fadeInRight">
-            <div class="row" id="article-table">
+            <div class="row">
                 <div class="col-lg-12">
                     <div class="ibox float-e-margins">
                         <div class="ibox-content">
-                            <div class="table-responsive">
                                 <table id="readertable" class="table table-striped table-bordered table-hover dataTables-example" >
                                     <thead>
                                     <tr>
@@ -111,17 +110,16 @@
 
                                     </tr>
                                     </thead>
-                                    <tbody>
+                                    <tbody id="readertbody">
 
-                                    <tr class="gradeA" v-for="new in news" v-bind:aid="new.aid">
-                                        <td v-text="new.title"></td>
-                                        <td v-text="new.content"></td>
-                                        <td v-text="new.eid"></td>
-                                    </tr>
+                                    <!--<tr v-for="new in news" v-bind:aid="new.aid">-->
+                                        <!--<td v-text="new.aid"></td>-->
+                                        <!--<td v-text="new.cid"></td>-->
+                                        <!--<td v-text="new.eid"></td>-->
+                                    <!--</tr>-->
 
                                     </tbody>
                                 </table>
-                            </div>
                         </div>
                     </div>
                 </div>
