--- a/web/article_manage.html
+++ b/web/article_manage.html
@@ -123,11 +123,11 @@
                                     <td v-text="article.aid"></td>
                                     <td v-text="article.title"></td>
                                     <td><code v-text="article.cname"></code></td>
-                                    <td><code v-text="article.ename"></code></td>
                                     <td><code v-text="article.uname"></code></td>
+                                    <td><code v-text="article.state"></code></td>
                                     <td>
                                         <div class="center-block">
-                                            <button class="btn btn-default" data-toggle="modal" data-target="#allowModal" v-bind:data-aid="article.aid" >允许上传</button>
+                                            <button class="btn btn-default" data-toggle="modal" data-target="#allowModal" v-bind:data-aid="article.aid" v-show="article.state === 'published'">允许上传</button>
                                             <button class="btn btn-default" data-toggle="modal" data-target="#rejectModal" v-bind:data-aid="article.aid" v-show="article.state === 'checked'">退回稿件</button>
                                             <button class="btn btn-default" data-toggle="modal" data-target="#deleteModal" v-bind:data-aid="article.aid" v-show="article.state === 'checked'">删除</button>
                                         </div>
@@ -162,7 +162,7 @@
             </div>
             <div class="modal-footer">
                 <button type="button" class="btn btn-default" data-dismiss="modal">取消</button>
-                <button type="button" class="btn btn-primary" data-dismiss="modal" aria-label="Close">确认</button>
+                <button type="button" class="btn btn-primary" data-dismiss="modal" aria-label="Close" id="reject">确认</button>
             </div>
         </div>
     </div>
