--- a/classes/artifacts/news_release_system_war_exploded/reader.html
+++ b/classes/artifacts/news_release_system_war_exploded/reader.html
@@ -163,6 +163,7 @@
                 <div class="col-lg-12">
                     <div class="ibox float-e-margins">
                         <div class="ibox-content">
+                            <div class="table-responsive">
                                 <table id="readertable" class="table table-striped table-bordered table-hover dataTables-example" >
                                     <thead>
                                     <tr>
@@ -174,12 +175,13 @@
                                     </thead>
 
                                     <tbody>
-                                
-                                    <tr class="gradeA" v-for="new in news" v-click="showArticle" v-bind:aid="new.aid">
-                                        <td v-text="new.title"></td>
-                                        <td v-text="new.content"></td>
-                                        <td v-text="new.eid"></td>
-                                    </tr>
+                                        <tr class="gradeA" v-for="new in news"  v-bind:aid="new.aid">
+                                            <td v-text="new.title"></td>
+                                            <td style="max-width: 110px;overflow:hidden;text-overflow:ellipsis;white-space:nowrap;">
+                                                <a v-text="new.contnet" v-click="showArticle()"></a>
+                                            </td>
+                                            <td v-text="new.eid"></td>
+                                        </tr>
 
                                     </tbody>
                                 </table>
@@ -208,31 +210,31 @@
 
 <!-- Page-Level Scripts -->
 <script>
-    // $(document).ready(function(){
-    //     $('.dataTables-example').DataTable({
-    //         pageLength: 10,
-    //         responsive: true,
-    //         // dom: '<"html5buttons"B>lTfgitp',
-    //         buttons: [
-    //             // { extend: 'copy'},
-    //             // {extend: 'csv'},
-    //             // {extend: 'excel', title: 'ExampleFile'},
-    //             // {extend: 'pdf', title: 'ExampleFile'},
+    $(document).ready(function(){
+        $('.dataTables-example').DataTable({
+            pageLength: 10,
+            responsive: true,
+            // dom: '<"html5buttons"B>lTfgitp',
+            buttons: [
+                // { extend: 'copy'},
+                // {extend: 'csv'},
+                // {extend: 'excel', title: 'ExampleFile'},
+                // {extend: 'pdf', title: 'ExampleFile'},
 
-    //             // {extend: 'print',
-    //             //     customize: function (win){
-    //             //         $(win.document.body).addClass('white-bg');
-    //             //         $(win.document.body).css('font-size', '10px');
-    //             //
-    //             //         $(win.document.body).find('table')
-    //             //             .addClass('compact')
-    //             //             .css('font-size', 'inherit');
-    //             //     }
-    //             // }
-    //         ]
-    //     });
+                // {extend: 'print',
+                //     customize: function (win){
+                //         $(win.document.body).addClass('white-bg');
+                //         $(win.document.body).css('font-size', '10px');
+                //
+                //         $(win.document.body).find('table')
+                //             .addClass('compact')
+                //             .css('font-size', 'inherit');
+                //     }
+                // }
+            ]
+        });
 
-    // });
+    });
 
 </script>
 
