--- a/web/index.html
+++ b/web/index.html
@@ -37,14 +37,14 @@
                 <li class="active">
                     <a href="hello.html"><i class="fa fa-th-large"></i> <span class="nav-label">主页</span></a>
                 </li>
-                <li>
-                    <a href="column_manage.html"><i class="fa fa-diamond"></i> <span class="nav-label">栏目管理</span></a>
+                <li v-show="level === 0">
+                    <a href="column_manage.html"><i class="fa fa-diamond"></i> <span class="nav-label" >栏目管理</span></a>
                 </li>
-                <li>
+                <li v-show="level === 0">
                     <a href="article_manage.html"><i class="fa fa-magic"></i> <span class="nav-label">文章管理</span></a>
                 </li>
 
-                <li >
+                <li v-show="level === 1">
                     <a href="#"><i class="fa fa-files-o"></i> <span class="nav-label">文章编辑管理</span><span class="fa arrow"></span></a>
                     <ul class="nav nav-second-level collapse">
                         <li><a href="editor.html">文章编辑</a></li>
@@ -133,6 +133,9 @@
 <script src="js/inspinia.js"></script>
 <script src="js/plugins/pace/pace.min.js"></script>
 <!--<script src="js/plugins/dropzone/dropzone.js"></script>-->
+
+<script src="https://cdn.jsdelivr.net/npm/vue"></script>
+<script src="index.js"></script>
 
 </body>
 
