--- a/web/reader.html
+++ b/web/reader.html
@@ -163,6 +163,7 @@
                 <div class="col-lg-12">
                     <div class="ibox float-e-margins">
                         <div class="ibox-content">
+                            <div class="table-responsive">
                                 <table id="readertable" class="table table-striped table-bordered table-hover dataTables-example" >
                                     <thead>
                                     <tr>
@@ -174,12 +175,14 @@
                                     </thead>
 
                                     <tbody>
-                                
-                                    <tr class="gradeA" v-for="new in news" v-click="showArticle" v-bind:aid="new.aid">
-                                        <td v-text="new.title"></td>
-                                        <td v-text="new.content"></td>
-                                        <td v-text="new.eid"></td>
-                                    </tr>
+                                        <tr class="gradeA" v-for="new in news"  v-bind:aid="new.aid" >
+                                            <td v-text="new.title"></td>
+                                            <td style="max-width: 110px;overflow:hidden;text-overflow:ellipsis;white-space:nowrap;" >abc</td>
+                                            <td>
+                                                <a class="text-muted" href="sample.html" v-text="new.contnet" onclick="showArticle()"></a>
+                                            </td>
+                                            <td v-text="new.eid"></td>
+                                        </tr>
 
                                     </tbody>
                                 </table>
