--- a/web/sample.html
+++ b/web/sample.html
@@ -108,7 +108,7 @@
                     <div class="ibox">
                         <div class="ibox-content">
                             <div class="pull-right">
-                                <button class="btn btn-white btn-xs" type="button">哲学</button>
+                                <button class="btn btn-white btn-xs" type="button">{{article.cname}}</button>
                             </div>
                             <div class="text-center article-title">
                                 <h1 class="text-warning">
