--- a/classes/artifacts/news_release_system_war_exploded/editor.html
+++ b/classes/artifacts/news_release_system_war_exploded/editor.html
@@ -111,8 +111,8 @@
                             <select class="form-control" style="width: 10%" v-model="cid" @change="getColumnSelected"> 
                                 <option :value="column.cid" v-for="column in columns" v-text="column.cname"></option>
                             </select>
-                        </div>
-                        <div>
+                        </div>  
+                        <div class="col-lg-offset-4">
                             <h3 class="text-danger">上传封面图片</h3>
                             <input type="file" class="file col-lg-4" id="uploadfile" style="width: 10px;height: 10px">
                         </div>
@@ -166,7 +166,7 @@
 
     $("#uploadfile").fileinput({
         language: 'zh', //设置语言
-        uploadUrl: "./list.json", //上传的地址(访问接口地址)
+        uploadUrl: "./editor/pic.json", //上传的地址(访问接口地址)
         allowedFileExtensions: ['jpg', 'png'],//接收的文件后缀
         //uploadExtraData:{"id": 1, "fileName":'123.mp3'},
         uploadAsync: true, //默认异步上传
