--- a/classes/artifacts/news_release_system_war_exploded/editor_article_manage.html
+++ b/classes/artifacts/news_release_system_war_exploded/editor_article_manage.html
@@ -162,7 +162,7 @@
             </div>
             <div class="modal-footer">
                 <button type="button" class="btn btn-default" data-dismiss="modal">取消</button>
-                <button type="button" class="btn btn-primary" data-dismiss="modal" aria-label="Close">确认</button>
+                <button type="button" class="btn btn-primary" data-dismiss="modal" id="allow" aria-label="Close">确认</button>
             </div>
         </div>
     </div>
@@ -201,7 +201,7 @@
             </div>
             <div class="modal-footer">
                 <button type="button" class="btn btn-default" data-dismiss="modal">取消</button>
-                <button type="button" class="btn btn-primary" data-dismiss="modal" aria-label="Close">确认</button>
+                <button type="button" class="btn btn-primary" id="delete" data-dismiss="modal" aria-label="Close">确认</button>
             </div>
         </div>
     </div>
