--- a/web/editor.html
+++ b/web/editor.html
@@ -166,7 +166,7 @@
 
     $("#uploadfile").fileinput({
         language: 'zh', //设置语言
-        uploadUrl: "./list.json", //上传的地址(访问接口地址)
+        uploadUrl: "./editor/pic.json", //上传的地址(访问接口地址)
         allowedFileExtensions: ['jpg', 'png'],//接收的文件后缀
         //uploadExtraData:{"id": 1, "fileName":'123.mp3'},
         uploadAsync: true, //默认异步上传
